--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ before_install:
 
 go:
   - 1.6
+
+deploy:
+    provider: gae
+    # Skip cleanup so api_key.py and vendored dependencies are still there
+    skip_cleanup: true
+    keyfile: gcp-credentials.json
+    project: dominion-p2p
+    default: true
+    on:
+        all_branches: true
