wercker and circle setup for kub

--- a/wercker.yml
+++ b/wercker.yml
@@ -33,7 +33,12 @@ build:
         name: do it
         code: |
           make
-
+    
+    - script:
+        name: push it
+        code: |
+          make push-container
+          
     # # Build the project
     # - script:
     #     name: go build
