deployment step and docker service

--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,13 @@
+machine:
+  services:
+    - docker
 test:
   post:
-    - make push-container
+    - make container
+
+deployment:
+  prod:
+    branch: master
+    commands:
+      - make push-container
+
