--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ script:
 
 go:
   - 1.6
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/d9a7eea639f218cfe5d3
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
